@@ -42,15 +42,15 @@ double attribute_hidden bd0(double x, double np)
     if(!R_FINITE(x) || !R_FINITE(np) || np == 0.0) ML_ERR_return_NAN;
 
     if (fabs(x-np) < 0.1*(x+np)) {
-	v = (x-np)/(x+np);
+	v = (x-np)/(x+np);  // might underflow to 0
 	s = (x-np)*v;/* s using v -- change by MM */
 	ej = 2*x*v;
 	v = v*v;
-	for (j=1; ; j++) { /* Taylor series */
+	for (j = 1; j  < 1000; j++) { /* Taylor series */
 	    ej *= v;
 	    s1 = s+ej/((j<<1)+1);
-	    if (s1==s) /* last term was effectively 0 */
-		return(s1);
+	    if (s1 == s) /* last term was effectively 0 */
+		return s1 ;
 	    s = s1;
 	}
     }
