@@ -63,6 +63,8 @@ double dbeta(double x, double a, double b, int give_log)
     }
     if (a <= 2 || b <= 2)
 	lval = (a-1)*log(x) + (b-1)*log1p(-x) - lbeta(a, b);
+    else if(!R_FINITE(a) || !R_FINITE(a))
+	lval = ML_NEGINF;
     else
 	lval = log(a+b-1) + dbinom_raw(a-1, a+b-2, x, 1-x, TRUE);
 
