@@ -248,6 +248,9 @@
       \item Error messages involving non-syntactic names (e.g. as produced
       by \code{`\\r`} when that object does not exist) now encode
       the control characters.  (Reported by Hadley Wickham.)
+      
+      \item \code{dbeta(x, a, b)} with \code{a} close to machine
+      infinity could infinite-loop.  (Reported by Ioannis Kosmidis.)
     }
   }
 }
